--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,4 +1,23 @@
 canvas{
-        width: 90% !important;
-        height: auto !important;
-    }
+    width: 90% !important;
+    height: auto !important;
+}
+
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.stock-button{
+  position:relative;
+  padding-left: 16px;
+  padding-right:16px;
+}
+.close-button:after {
+  content: '✖'; 
+  position:absolute;
+  margin-top:-10px;
+  margin-left:3px;
+}
