--- a/client/src/templates/graph.html
+++ b/client/src/templates/graph.html
@@ -1,4 +1,4 @@
-<h1>Stock History</h1>
+<h1 class ="text-center">Historical Stock Prices</h1>
 <div class = 'text-center'>
 <canvas id="myChart"></canvas>
 </div>
