--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,30 +1,81 @@
-canvas{
-    width: 90% !important;
-    height: auto !important;
+canvas {
+  width: 90% !important;
+  height: auto !important;
 }
-
 
 html,
 body {
   width: 100%;
   height: 100%;
+  text-align: center;
 }
 
-.stock-button{
-  position:relative;
-  padding-left: 16px;
-  padding-right:16px;
-  margin:10px;
+.stock-button {
+  position: relative;
+  padding-left: 8px;
+  padding-right: 38px;
+  padding-top: 3px;
+  margin: 10px;
+  color: black;
+  line-height: 1.42857143;
+  text-align: left;
+  border: thin solid transparent;
+  border-bottom: thin solid #C8C8C8;
+  border-radius: 4px 4px 0 0;
+  background-color: transparent;
 }
+
+.stock-button:hover {
+  border: thin solid #C8C8C8;
+  background-color: grey;
+}
+
 .close-button:after {
-  content: '✖'; 
-  position:absolute;
-  margin-top:-10px;
-  margin-left:3px;
+  content: '✖';
+  position: absolute;
+  margin-left: 22px;
+  margin-top: -5px;
 }
 
-#stock-list{
-  display:flex;
+#stock-list {
+  display: flex;
+  max-width: 90%;
   flex-flow: row wrap;
-  justify-content: space-around;
+  margin: auto;
+  padding-bottom: 10px;
+  justify-content: flex-start;
+}
+
+.chart-legend li {
+  list-style-type: none;
+}
+
+#js-legend {
+  text-align: center;
+  padding: 4px;
+  width: 90% !important;
+  margin: auto;
+  padding-bottom: 20px;
+}
+
+#js-legend .title {
+  margin-bottom: 0.5em;
+  padding: 0 0.3em;
+  display: inline;
+}
+
+.title>div {
+  display: inline-block;
+  content: "";
+  vertical-align: middle;
+  height: 100%;
+}
+
+.color-sample {
+  display: block;
+  width: 1em;
+  height: 1em;
+  border: 2px solid;
+  border-radius: 0.5em;
+  margin-right: 3px;
 }
