--- a/client/src/templates/search-bar.html
+++ b/client/src/templates/search-bar.html
@@ -1,5 +1,14 @@
-<form id="login-form" class="col-xs-10 col-lg-6 col-md-8 col-sm-6 col-centered">
-    <label for="email">New Stock</label>
-    <input id="stock-name" placeholder="Stock Name" type="text" autofocus />
-    <button class="search btn btn-success" type="submit">Submit</button>
+ <form role="form">
+    <div class="form-group" style="max-width:90%; margin:auto;">
+        <div class="controls">
+           
+                <div class="input-group">
+                    <input class="form-control" id="stock-name" placeholder="Stock Name" type="text" autofocus>
+                    <span class="input-group-btn">
+          	<button type="submit" class="search btn btn-success"><span class="glyphicon glyphicon-plus"></span></button>
+                    </span>
+           
+            </div>
+        </div>
+    </div>
 </form>
