--- a/client/src/templates/stock.html
+++ b/client/src/templates/stock.html
@@ -1,2 +1,5 @@
- <button type="button" class="btn btn-success stock-button"><%=stock.symbol%><a href="#" class="close-button"></a>
-</button>
+<!-- <button type="button" class="btn btn-success stock-button"><%=stock.symbol%><a href="#" class="close-button"></a>-->
+<!--</button>-->
+
+ <div class="stock-button"><%=stock.symbol%><a href="#" class="close-button"></a>
+</div>
