Fixed socket.io implementation

--- a/client/src/templates/graph.html
+++ b/client/src/templates/graph.html
@@ -1,5 +1,9 @@
-<h1 class ="text-center">Historical Stock Prices</h1>
-<div class = 'text-center'>
+<h2 class ="text-center">Chart historical stock price data and observe what stocks other users are examining in real-time</h2>
+
+<div class = 'text-center graph-container'>
+    <div class="page-header" id="message" style="display:none;">
+    <h3>Add a stock to see a graph of this stock's prices in the last year.</h3>
+    </div>
 <canvas id="myChart"></canvas>
 </div>
 
