--- a/client/src/templates/search-bar.html
+++ b/client/src/templates/search-bar.html
@@ -1,4 +1,4 @@
- <form role="form">
+ <form role="form" class="search-form">
     <div class="form-group" style="max-width:90%; margin:auto;">
         <div class="controls">
            
@@ -11,4 +11,5 @@
             </div>
         </div>
     </div>
+    <div class = "error" style="display:none; color:red;margin:auto;max-width:90%;">Please enter a valid stock name.</div>
 </form>
