deleted tests folder

--- a/client/src/templates/search-bar.html
+++ b/client/src/templates/search-bar.html
@@ -1,15 +1,13 @@
- <form role="form" class="search-form">
+<form role="form" class="search-form" style="padding-bottom:20px;">
     <div class="form-group" style="max-width:90%; margin:auto;">
         <div class="controls">
-           
-                <div class="input-group">
-                    <input class="form-control" id="stock-name" placeholder="Stock Name" type="text" autofocus>
-                    <span class="input-group-btn">
-          	<button type="submit" class="search btn btn-success"><span class="glyphicon glyphicon-plus"></span></button>
-                    </span>
-           
+            <div class="input-group">
+                <input class="form-control" id="stock-name" placeholder="Stock Name" type="text" autofocus>
+                <span class="input-group-btn">
+          	        <button type="submit" class="search btn btn-success"><span class="glyphicon glyphicon-plus"></span></button>
+                </span>
             </div>
         </div>
     </div>
-    <div class = "error" style="display:none; color:red;margin:auto;max-width:90%;">Please enter a valid stock name.</div>
+    <div class="error" style="display:none; color:red;margin:auto;max-width:90%;">Please enter a valid stock name.</div>
 </form>
