Deleted debugging stuff

--- a/client/src/templates/graph.html
+++ b/client/src/templates/graph.html
@@ -1,4 +1,4 @@
-<h2 class ="text-center">Chart historical stock price data and observe what stocks other users are examining in real-time</h2>
+<h2 class ="text-center">Chart historical stock data and observe what stocks other users are examining in real-time</h2>
 
 <div class = 'text-center graph-container'>
     <div class="page-header" id="message" style="display:none;">
