Deleted debugging comments and code

--- a/client/src/templates/graph.html
+++ b/client/src/templates/graph.html
@@ -1,5 +1,4 @@
-<h2 class ="text-center">Chart historical stock data and observe what stocks other users are examining in real-time</h2>
-
+<h2 class ="text-center">Collaborative Stock Examination in Real-Time</h2>
 <div class = 'text-center graph-container'>
     <div class="page-header" id="message" style="display:none;">
     <h3>Add a stock to see a graph of this stock's prices in the last year.</h3>
