--- a/client/src/templates/search-bar.html
+++ b/client/src/templates/search-bar.html
@@ -9,5 +9,5 @@
             </div>
         </div>
     </div>
-    <div class="error" style="display:none; color:red;margin:auto;max-width:90%;">Please enter a valid stock name.</div>
+    <div class="error" style="display:none; color:red;margin:auto;max-width:90%;"></div>
 </form>
