Added config vars via .env

--- a/client/src/templates/graph.html
+++ b/client/src/templates/graph.html
@@ -1,4 +1,4 @@
-<h2 class ="text-center">Collaborative Stock Examination in Real-Time</h2>
+<h1 class ="text-center" style="margin-top:10px;">Real-Time Collaborative Stock Tracker</h1>
 <div class = 'text-center graph-container'>
     <div class="page-header" id="message" style="display:none;">
     <h3>Add a stock to see a graph of this stock's prices in the last year.</h3>
