--- a/client/src/templates/stock.html
+++ b/client/src/templates/stock.html
@@ -1,2 +1,2 @@
-<div class="stock-button"><%=stock.symbol%><a href="#" class="close-button"></a>
+<div class="stock-button"><%=stock.symbol%><span class="close-button"></span>
 </div>
