Deploy on Heroku

--- a/client/src/templates/search-bar.html
+++ b/client/src/templates/search-bar.html
@@ -2,12 +2,12 @@
     <div class="form-group" style="max-width:90%; margin:auto;">
         <div class="controls">
             <div class="input-group">
-                <input class="form-control" id="stock-name" placeholder="Stock Name" type="text" autofocus>
+                <input class="form-control" id="stock-name" placeholder="U.S. Stock Ticker Symbol" type="text" autofocus>
                 <span class="input-group-btn">
           	        <button type="submit" class="search btn btn-success"><span class="glyphicon glyphicon-plus"></span></button>
                 </span>
             </div>
         </div>
     </div>
-    <div class="error" style="display:none; color:red;margin:auto;max-width:90%;"></div>
+    <div class="error" style="display:none; color:red;margin:auto;max-width:90%;height:10px;"></div>
 </form>
